Updated: Fixed Security Bugs